--- a/index.html
+++ b/index.html
@@ -3,35 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Redes Sociais</title>
-    <style>
-        iframe{
-            width: 320px;
-            height: 500px;
-        }
-
-        body{
-            background-image: url(imagens/fundo-madeira.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    </style>
 </head>
+
 <body>
-    <iframe name="frame" src="" frameborder="1"></iframe>
-    <p><a href="links/inicio.html" target="frame">Inicio</a></p>
+    <div id="posicao" class="celular"> 
+        <div class="frames"><iframe scrolling="no" name="frame" src="" frameborder="0"></iframe> </div>
+    </div>
 
-    <p><a href="links/youtube.html" target="frame">Youtube</a></p>
 
-    <p><a href="links/instagram.html" target="frame">Instagram</a></p>
 
-    <p><a href="links/github.html" target="frame">GitHub</a></p>
+    <p><a href="links/home.html" target="frame"><img src="imagens/logo-home.jpg" alt=""></a></p>
 
-    <p><a href="links/twitter.html" target="frame">Twitter</a></p>
+    <p><a href="links/youtube.html" target="frame"><img src="imagens/logo-youtube.jpg" alt=""></a></p>
 
-    <p><a href="links/facebook.html" target="frame">Facebook</a></p>
+    <p><a href="links/instagram.html" target="frame"><img src="imagens/logo-instagram.jpg" alt=""></a></p>
+
+    <p><a href="links/github.html" target="frame"><img src="imagens/logo-github.jpg" alt=""></a></p>
+
+    <p><a href="links/twitter.html" target="frame"><img src="imagens/logo-twitter.jpg" alt=""></a></p>
+
+    <p><a href="links/facebook.html" target="frame"><img src="imagens/logo-facebook.jpg" alt=""></a></p>
+    
     
 </body>
 </html>
