Tentativas de Ajustes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="posicao" class="celular"> 
-        <div class="frames"><iframe scrolling="no" name="frame" src="" frameborder="0"></iframe> </div>
+        <div class="frames"><iframe scrolling="yes" name="frame" src="" frameborder="0"></iframe> </div>
     </div>
 
 
