--- a/links/youtube.html
+++ b/links/youtube.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitter</title>
+    <title>Youtube</title>
+    <style>  
+        div.imagem{
+            width: 267px;
+            height: 480px;
+            background-image: url(../imagens/youtube2.jpg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        #container{
+            position: relative;
+            height: 100vh;
+        }
+
+        #conteudo{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        
+    </style>
 </head>
 <body>
-    <h1>Eu não tenho</h1>
-    
+    <div id="container">
+        <div id="conteudo" class="imagem"></div>
 </body>
+</div>
 </html>
